fix gap

--- a/client/src/components/App/style.css
+++ b/client/src/components/App/style.css
@@ -88,7 +88,7 @@
 
 .Profile {
   position: absolute;
-  top: 9vh;
+  top: 50px;
   left: 0;
   width: 100%;
   height: 100%;
